--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,23 @@
 @import "reset.css";
 @import "normalize.css";
+
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+
+body {
+	font-family: 'Source Sans Pro', sans-serif;
+	background: #FF4747;
+}
+
+.wrap {
+	width: 400px;
+	margin: 0 auto;
+}
+
+.task-list {
+	width: 88%;
+	min-height: 300px;
+	background: #fff;
+	box-shadow: 2px 2px 0px #ddd;
+	margin-top: 40px;
+	padding: 22px 6%;
+}
