--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,30 @@
 
 body {
 	font-family: 'Raleway', sans-serif;
-	background: #FF4747;
+	background-image: url("http://www-desktopwallpaper.com/wp-content/uploads/2014/04/hd-wallpaper-space-starsspace-wallpaper-hd-stars--86347-at-nature-wallpapers-----1080p-hd-5xrdk4ft.jpg");
+	background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+	color: white;
+}
+
+input {
+	color: black;
+	margin: 10px;
+
+}
+
+#form {
+	text-align: center;
+}
+
+#submit {
+	background-color: white;
+	color: black;
+	border-radius: 20px;
+	padding: 7px;
+	margin-left: 60px;
 }
 
 .wrap {
@@ -17,7 +40,30 @@ body {
 	width: 88%;
 	min-height: 300px;
 	background: #fff;
-	box-shadow: 2px 2px 0px #ddd;
 	margin-top: 40px;
 	padding: 22px 6%;
+}
+
+#login {
+	text-align: center;
+	background-color: white;
+	font-size: 30px;
+	height: 50px;
+	width: 300px;
+	margin-top: 20px;
+	margin-left: 550px;
+	padding: 15px 0px 0px 0px;
+	border-radius: 100px;
+}
+
+#register {
+	text-align: center;
+	background-color: white;
+	font-size: 30px;
+	height: 50px;
+	width: 300px;
+	margin-top: 20px;
+	margin-left: 550px;
+	padding: 15px 0px 0px 0px;
+	border-radius: 100px;
 }
